# en-sentiment-recommender

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/: baseline_report.txt  metrics.json  sentiment_tfidf_logreg.joblib
src/api/: main.py
src/app/: streamlit_app.py
src/data/: load_imdb.py
src/models/: eval_baseline.py  infer.py  inspect_baseline.py  predict.py  train_baseline.py
src/recommender/: build_index.py  query.py  recommend.py
tests/: test_smoke.py
